# clemcore

./: .gitignore  README.md  agent_experiment_taboo.ipynb  key.json.template  pyproject.toml
.github/workflows/: test-installation.yml  test-integration.yml  test-unit.yml
clemcore/: cli.py  ewst.py
clemcore/backends/: model_registry.json  model_registry.py
clemcore/clemgame/: __init__.py  master.py  player.py
clemcore/clemgame/agency/: agency_config.json  reflect.py
clemcore/clemgame/callbacks/: files.py
clemcore/clemgame/legacy/: master.py
clemcore/clemgame/runners/: batchwise.py
examples/trl/: dpo_trainer.py
game_results/baseline/: raw.csv  results.csv  results.html
notebooks/: LangChain_draft.ipynb  LangChain_experiments.ipynb  LangChain_experiments_referencegame.ipynb  LangChain_experiments_taboo.ipynb  LangChain_experiments_textmapworld.ipynb
playpen/: __init__.py  base.py  buffers.py  cli.py
playpen/branching/: master.py  player.py  tree.py
playpen/callbacks/: buffers.py  files.py
playpen/starters/: batch_trainer.py  branching_trainer.py  sequential_trainer.py
tests/: test_backend.py  test_backend_registry.py  test_cli.py  test_dynamic_batch_loader.py  test_game_instance_iterator.py  test_game_registry.py  test_game_spec.py  test_huggingface_integration.py  test_huggingface_local_api.py  test_key_registry.py  test_model_registry.py  test_model_registry_integration.py  test_model_spec.py  test_pettingzoo_api.py  test_pettingzoo_master.py  test_pettingzoo_wrappers.py  test_player_batch.py  test_recorder.py  test_string_utils.py
(+613 files in other folders)
